@@ -1,0 +1,11 @@
+Feb 11 20:36:51 linux kernel: [463590.337950] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=52 ID=31448 PROTO=TCP SPT=56248 DPT=23 WINDOW=2048 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.338224] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=40 ID=42576 PROTO=TCP SPT=56248 DPT=23 WINDOW=2048 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.339690] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=58 ID=23656 PROTO=TCP SPT=56248 DPT=23 WINDOW=4096 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.339959] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=58 ID=17525 PROTO=TCP SPT=56248 DPT=23 WINDOW=4096 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.341403] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=50 ID=52825 PROTO=TCP SPT=56248 DPT=23 WINDOW=4096 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.341663] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=41 ID=49781 PROTO=TCP SPT=56248 DPT=23 WINDOW=3072 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.341948] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=44 ID=11632 PROTO=TCP SPT=56248 DPT=23 WINDOW=2048 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.342238] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=49 ID=17055 PROTO=TCP SPT=56248 DPT=23 WINDOW=3072 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:51 linux kernel: [463590.344175] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=38 ID=24316 PROTO=TCP SPT=56248 DPT=23 WINDOW=4096 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:52 linux kernel: [463591.338686] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=49 ID=40443 PROTO=TCP SPT=56247 DPT=23 WINDOW=3072 RES=0x00 SYN URGP=0 OPT (020405B4) 
+Feb 11 20:36:53 linux kernel: [463592.336687] DROP IN=eth1 OUT= MAC=23:87:fc:c6:24:58:00:21:3f:98:99:78:09:00 SRC=192.168.10.55 DST=192.168.10.1 LEN=44 TOS=0x00 PREC=0x00 TTL=38 ID=16145 PROTO=TCP SPT=56248 DPT=2323 WINDOW=4096 RES=0x00 SYN URGP=0 OPT (020405B4) 
